Update the documentation according the features of weasis 3.5